Make start on scoring func

--- a/lib/acgp_web/live/what_the_name.html.leex
+++ b/lib/acgp_web/live/what_the_name.html.leex
@@ -14,6 +14,7 @@
                     <% end %>
                     <br>
                     <br>
+                    <%= hidden_input f, "my_name", value: @my_name %>
                     <input type="submit" id="submitButton" class="button is-primary is-rounded">
                 </form>
                 </article>
