--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -27,10 +27,28 @@ canvas[resize] {
     border: none;
 }
 
-.dropzone {
-  width: 400px;
-  height: 400px;
-  border: 3px dashed black;
+#photos {
+  /* Prevent vertical gaps */
+  line-height: 0;
+   
+  -webkit-column-count: 5;
+  -webkit-column-gap:   0px;
+  -moz-column-count:    5;
+  -moz-column-gap:      0px;
+  column-count:         5;
+  column-gap:           0px;  
+}
+
+#photos img {
+  /* Just in case there are inline attributes */
+  width: 100% !important;
+  height: auto !important;
+  opacity: 0.4;
+  cursor: pointer;
+}
+
+#photos img:hover {
+  opacity: 1;
 }
 
 .hidden {
