--- a/lib/acgp_web/templates/layout/nav.html.eex
+++ b/lib/acgp_web/templates/layout/nav.html.eex
@@ -16,6 +16,7 @@
             <a class="navbar-item" href="/drawit">DrawIt</a>
             <a class="navbar-item" href="/aw">AnswerWrong</a>
             <a class="navbar-item" href="/wtn">What the name?</a>
+            <a class="navbar-item" href="/<%= Enum.random(["askhole", "mml", "drawit", "aw", "wtn"])%>">Random</a>
         </div>
     </div>
 </nav>
