--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -8,6 +8,10 @@ body {
   padding: 0;
 }
 
+.makeBig {
+  color: red;
+}
+
 .navbar-menu {
   background-color: #7fd6cd;
 }
@@ -60,7 +64,7 @@ width: 100%;
 margin: 60px 0; 
 
 }
-.column {
+.edencolumn {
 display: flex;
 flex-direction: column;
 flex-basis: 100%;
@@ -262,7 +266,7 @@ width: 100% ;
 }
 
 #drawItCanvas {
-    border: 1px solid black;
+  background-color: ghostwhite;
 }
 
 /* Scale canvas with resize attribute to full size */
@@ -276,6 +280,7 @@ canvas[resize] {
 }
 
 .drawBox {
+  background-color: ghostwhite;
     border: none;
 }
 
