--- a/lib/acgp_web/templates/page/index.html.eex
+++ b/lib/acgp_web/templates/page/index.html.eex
@@ -18,7 +18,7 @@
 <section class="games">
 
 <div class="row">
-<div class="tile is-vertical column">
+<div class="tile is-vertical edencolumn">
   <div class="tile is-parent">
     <article class="tile is-child">
         <div class="game-card">
@@ -37,7 +37,7 @@
   </div>
 </div>
 
-<div class="tile is-vertical column">
+<div class="tile is-vertical edencolumn">
   <div class="tile is-parent">
     <article class="tile is-child">
         <div class="game-card">
@@ -56,7 +56,7 @@
   </div>
 </div>
 
-<div class="tile is-vertical column">
+<div class="tile is-vertical edencolumn">
   <div class="tile is-parent">
     <article class="tile is-child">
         <div class="game-card">
@@ -74,7 +74,7 @@
     </article>
   </div>
 </div>
-<div class="tile is-vertical column">
+<div class="tile is-vertical edencolumn">
   <div class="tile is-parent">
     <article class="tile is-child">
         <div class="game-card">
@@ -94,7 +94,7 @@
   </div>
 </div>
 
-<div class="tile is-vertical column">
+<div class="tile is-vertical edencolumn">
   <div class="tile is-parent">
     <article class="tile is-child">
         <div class="game-card">
@@ -113,7 +113,7 @@
   </div>
 </div>
 
-<div class="tile is-vertical column">
+<div class="tile is-vertical edencolumn">
   <div class="tile is-parent">
     <article class="tile is-child">
         <div class="game-card">
