--- a/lib/acgp_web/live/draw_it.html.leex
+++ b/lib/acgp_web/live/draw_it.html.leex
@@ -74,7 +74,7 @@ function onMouseUp(event) {
                         <article class="tile is-child notification is-danger">
                             <p class="title">What has been drawn?</p>
                             <%= for ans <- @game_state.possible_answers do %>
-                                <button class="button margin-bottom" phx-click="guess" phx-value-user="<%= @my_name %>" phx-value-answer="<%= ans %>"><%= ans %></button>
+                                <button class="button margin-bottom is-large" phx-click="guess" phx-value-user="<%= @my_name %>" phx-value-answer="<%= ans %>"><%= ans %></button>
                             <% end %>
                         </article>
                         <% else %>
