--- a/lib/acgp_web/templates/page/index.html.eex
+++ b/lib/acgp_web/templates/page/index.html.eex
@@ -6,7 +6,7 @@
 <div class="hero-body">
 <div class="container">
   <p class="title">
-    Hello Eden!
+    HelloEden
   </p>
   <p class="subtitle">
     A place for games
