--- a/lib/acgp_web/live/components/player_list.html.leex
+++ b/lib/acgp_web/live/components/player_list.html.leex
@@ -5,3 +5,6 @@
     <% end %>
     </ol>
 </div>
+
+
+<div id="otEmbedContainer" style="width:800px; height:640px"></div> <script src="https://tokbox.com/embed/embed/ot-embed.js?embedId=362d9a4d-481c-4253-aa1b-473f5b755aae&room=<%= @channel_id %>"></script>
