add channel_id to all games

--- a/lib/acgp_web/live/answer_wrong.html.leex
+++ b/lib/acgp_web/live/answer_wrong.html.leex
@@ -12,5 +12,5 @@
 
 
 <%= if length(@users) >= 3 do %>
-    <%= live_component @socket, AcgpWeb.PlayerList, id: "PlayerList", game_state: @game_state, my_name: @my_name, users: @users %>
+    <%= live_component @socket, AcgpWeb.PlayerList, id: "PlayerList", game_state: @game_state, my_name: @my_name, users: @users, channel_id: @channel_id %>
 <% end %>
