--- a/lib/acgp_web/live/components/player_list.html.leex
+++ b/lib/acgp_web/live/components/player_list.html.leex
@@ -6,4 +6,4 @@
     </ol>
 </div>
 
-<iframe src="https://tokbox.com/embed/embed/ot-embed.js?embedId=362d9a4d-481c-4253-aa1b-473f5b755aae&room=DEFAULT_ROOM&iframe=true" width=800 height=640 scrolling="auto" allow="microphone; camera" ></iframe>
+<iframe src="https://tokbox.com/embed/embed/ot-embed.js?embedId=362d9a4d-481c-4253-aa1b-473f5b755aae&room=<%= @channel_id %>&iframe=true" width=800 height=640 scrolling="auto" allow="microphone; camera" ></iframe>
