--- a/lib/acgp_web/live/what_the_name.html.leex
+++ b/lib/acgp_web/live/what_the_name.html.leex
@@ -28,6 +28,6 @@
                     </div>
             <% end %>
             </div>
-         <%= live_component @socket, AcgpWeb.PlayerList, id: "WTNPlayerList", game_state: @game_state, my_name: @my_name, users: @users %>
+         <%= live_component @socket, AcgpWeb.PlayerList, id: "WTNPlayerList", game_state: @game_state, my_name: @my_name, users: @users, channel_id: @channel_id %>
     </div>
 </div>
