--- a/lib/acgp_web/live/picture_it.html.leex
+++ b/lib/acgp_web/live/picture_it.html.leex
@@ -9,5 +9,5 @@
 
 
 <%= if length(@users) >= 2 do %>
-    <%= live_component @socket, AcgpWeb.PlayerList, id: "PlayerList", game_state: @game_state, my_name: @my_name, users: @users %>
+    <%= live_component @socket, AcgpWeb.PlayerList, id: "PlayerList", game_state: @game_state, my_name: @my_name, users: @users, channel_id: @channel_id %>
 <% end %>
