--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -14,6 +14,15 @@ body {
   font-size: xx-large;
 }
 
+#canvas-container {
+  width: 100%;
+  text-align:center;
+}
+
+canvas {
+  display: inline;
+}
+
 .navbar-menu {
   background-color: #7fd6cd;
 }
