--- a/lib/acgp_web/live/abundance.html.leex
+++ b/lib/acgp_web/live/abundance.html.leex
@@ -1,12 +1,19 @@
-<button class="button is-primary" id="stepForward">Step forward<button>
-<br>
-<br>
-<canvas id="myCanvas" phx-hook="SendCells" width="400" height="400"></canvas>
+<div class="columns">
+	<div class="column is-two-thirds">
+		<div id="canvas-container">
+			<canvas id="myCanvas" phx-hook="SendCells" width="500" height="500"></canvas>
+			<button class="button is-large" id="stepForward">Step forward</button>
+		</div>
+	</div>
+	<div class="column is-one-quarter">
+	    <ol type="1">
+    <%= for user <- @users do %>
+        <li><%= if @my_name == user.name do %>Me<% else %><%= user.name %><% end %> | <span><progress class="progress is-primary" max="100", value="<%= get_coverage(@game_state, user) %>"></progress></span></li>
+    <% end %>
+    </ol>
+	</div>
 
-
-<br>
-<br>
-
+</div>
 
 
 <script type="text/paperscript" canvas="myCanvas">
@@ -34,7 +41,9 @@ function onMouseDown(event) {
 		fill: true,
 		tolerance: 5
 	});
-	drawPaths(Abundance.updateBoard(cells, hitResult.item.index));
+	cells = Abundance.updateBoard(cells, hitResult.item.index);
+	Abundance.sendGridEvent(board, cells);
+	drawPaths(Abundance.calcBoard(cells));
 }
 
 // Draw func needs to be in the paperscript block
