make grid more attractive and add instructions

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -23,6 +23,12 @@ canvas {
   display: inline;
 }
 
+#GOLCanvas {
+  margin: 0px;
+  padding: 0px;
+  border: 1px solid lightgray;
+}
+
 .navbar-menu {
   background-color: #7fd6cd;
 }
